--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ body {
 
 #header {
   width: 100%;
-  height: 200vh;
+  height: 100%;
   background-image: url(images/p.jpeg);
   background-size: cover;
-  background-position: center;
+  padding-bottom: 12rem;
+  /* background-position: center; */
+  background-repeat: no-repeat;
 }
 
 .container {
@@ -76,9 +78,9 @@ li:hover {
   font-size: 30px;
 }
 
-.header-text h3{
+.header-text h3 {
   font-size: 30px;
-  margin-top:-12%;
+  margin-top: -12%;
 }
 
 .header-text h1 {
@@ -335,7 +337,7 @@ form textarea {
   border-radius: 6px;
 }
 
-form > .btn2 {
+form>.btn2 {
   padding: 14px 60px;
   font-size: 18px;
   margin-top: 20px;
@@ -383,7 +385,8 @@ form > .btn2 {
     flex-direction: column;
     margin: 20px 0;
   }
-  nav > ul {
+
+  nav>ul {
     display: flex;
     gap: 11vw;
   }
@@ -420,7 +423,7 @@ form > .btn2 {
   }
 
 
-  #contact{
+  #contact {
     flex-wrap: wrap;
     gap: 4rem;
   }
@@ -455,9 +458,9 @@ form > .btn2 {
   }
 }
 
-#msg{
+#msg {
   color: #61b752;
-  margin-bottom:-10px;
+  margin-bottom: -10px;
   display: block;
   float: right;
   width: 300px;
